<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CameraBenchmark</string>
    <string name="action_settings">Settings</string>
    <!-- Главная-->
    <string name="rezultati">Results</string>
    <string name="menu">Menu</string>
    <string name="test">Test</string>
    <string name="reitingi">Rating</string>
    <string name="o_nas">About Us</string>
    <string name="opisanie">This application will help you to assess the quality of your camera and compare it with the camera on other devices.</string>
    <!-- О Нас -->
    <string name="text_o_nas">  To contact us, connect your device to the internet and fill out the form . We will reply you as soon as possible . Sincerely administration CamLab. P.S. Our team will be glad to any of your comments and suggestions. Soon more tests! </string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="email">E-mail</string>
    <string name="your_email">Your e-mail</string>
    <string name="massege">Massege</string>
    <string name="sent"> \u0020 \u0020 Send </string>
    <string name="text_authors">Project authors: \u0085 \u2602 Alex Slobodeniuk \u0085 Shevchenko Sergey</string>
    <!-- Результат стат тестов -->
    <string name="stat_testov">static tests</string>
    <string name="front_camera">Front camera:</string>
    <string name="back_camera">Back camera:</string>
    <string name="stat_rezultat">The overall result:</string>
    <!-- Выбор тестов -->
    <string name="testing">Testing</string>
    <string name="viberi_test">Select the test</string>
    <string name="testirovat">    Test</string>
    <string name="parametri_device">Parameters of the tested device:</string>
    <string name="device">Davice:</string>
    <string name="android_version">Android version:</string>
    <string name="max_razreshenie">Maximum resolution of photo:</string>
    <string name="fokus_rasstoyanie">Focal length:</string>
    <string name="statikal">Static</string>
    <string name="dynamik">Dynamic</string>

    <!-- Результат динам тестов -->
    <string name="dynam_test">Dynamic tests</string>
    <string name="dyn_test_1">Test 1:</string>
    <string name="dyn_test_2">Test 2:</string>
    <string name="dyn_test_3">Test 3:</string>
    <string name="dyn_test_4">Test 4:</string>

    <string name="add_tests">Soon more tests!</string>

    <string name="loading">Loading!</string>

    <!-- Рейтинги -->
    <string name="run_static_tests">Run static tests</string>

    <!-- Error сообщение во вьюхе сьемки фоток банаса белого о том что лист должен быть белым   -->
    <string name="notification_title">Attention!</string>
    <string name="wb_notification_text">For the test you need to take a picture of a bright object (such as a light bulb)</string>
    <string name="wb_notification_button">I found a bright object, start the test</string>
    <string name="wb_notification_black_text">To do this test you need to close lens of, (for example with a finger) and photo black</string>
    <string name="wb_notification_black_button">I closed the lens of, start the test</string>
    <!-- Общие -->
    <string name="podpis">\u00A9 2013</string>
    <string name="null_test_allert">Please first go through tests</string>
    <string name="cancel">Cancel</string>
    <string name="ratings">Ratings</string>

</resources>
