<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backg"
    android:scrollbars="vertical"
    android:tileMode="repeat">
    <TextView
        style="@style/text_32"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/testing"/>
    <View
        style="@style/margin_10dp"
        android:layout_width="wrap_content"
        android:background="@drawable/separator"
        android:layout_height="1dp" />
    <LinearLayout
        android:orientation="vertical"
        style="@style/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="@style/text_16"
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:text="@string/viberi_test"/>

        <RadioGroup
            android:id="@+id/radiotests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <RadioButton
                android:textColor="@color/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statikal"
                android:id="@+id/stat_test" />
            <RadioButton
                android:textColor="@color/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamik"
                android:id="@+id/dyn_test" />
            </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:text="@string/testirovat"
        android:textColor="#ffffffff"
        android:textSize="25sp"
        android:id="@+id/startTestButton"
        android:background="@drawable/knopka_testing"/>
    <View
        style="@style/margin_10dp"
        android:layout_width="wrap_content"
        android:background="@drawable/separator"
        android:layout_height="1dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">
        <TextView
            style="@style/text_16"
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:text="@string/parametri_device"/>
        <TextView
            style="@style/text_16"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:id="@+id/dev_text"
            android:text="@string/device"/>
        <TextView
            style="@style/text_16"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:id="@+id/android_ver_text"
            android:text="@string/android_version"/>
        <TextView
        style="@style/text_16"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center_horizontal"
        android:id="@+id/cam_mp_text"
        android:text="@string/max_razreshenie"/>
        <TextView
            style="@style/text_16"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:id="@+id/cam_focus_text"
            android:text="@string/fokus_rasstoyanie"/>
        <TextView
            style="@style/text_16"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:id="@+id/someText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal">
        <TextView
            android:text="@string/podpis"
            android:textColor="#ffffff"
            android:gravity="bottom"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"/>
    </LinearLayout>

</LinearLayout>
