<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/backg"
    android:scrollbars="vertical"
    android:tileMode="repeat">

    <TextView
        style="@style/text_32"
        android:layout_marginTop="0dp"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/rezultati"/>
    <TextView
        style="@style/text_16"
        android:layout_marginTop="0dp"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:gravity="center_horizontal"
        android:text="@string/dynam_test"/>
    <View
        style="@style/margin_10dp"
        android:layout_width="wrap_content"
        android:background="@drawable/separator"
        android:layout_height="1dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/text_16"
                android:layout_marginTop="0dp"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="@string/dyn_test_1"
                android:id="@+id/dyn_test_1"/>
            <TextView
                style="@style/text_16"
                android:layout_marginTop="0dp"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="рез 1"
                android:id="@+id/dyn_rez_1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/text_16"
                android:layout_marginTop="0dp"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="@string/dyn_test_2"
                android:id="@+id/dyn_test_2"/>
            <TextView
                style="@style/text_16"
                android:layout_marginTop="0dp"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="рез 2"
                android:id="@+id/dyn_rez_2"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/text_16"
                android:layout_marginTop="0dp"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="@string/dyn_test_3"
                android:id="@+id/dyn_test_3"/>
            <TextView
                style="@style/text_16"
                android:layout_marginTop="0dp"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="рез 3"
                android:id="@+id/dyn_rez_3"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/text_16"
                android:layout_marginTop="0dp"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="@string/dyn_test_4"
                android:id="@+id/dyn_test_4"/>
            <TextView
                style="@style/text_16"
                android:layout_marginTop="0dp"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="Рез 4"
                android:id="@+id/dyn_rez_4"/>
            </LinearLayout>
    <View
        style="@style/margin_10dp"
        android:layout_width="wrap_content"
        android:background="@drawable/separator"
        android:layout_height="1dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <TextView
        style="@style/text_32"
        android:layout_marginTop="0dp"
        android:layout_width="fill_parent"
        android:layout_height="39dp"
        android:text="@string/stat_rezultat"
/>
    <TextView
        style="@style/text_32"
        android:layout_marginTop="0dp"
        android:layout_width="fill_parent"
        android:layout_height="39dp"
        android:text="156"
        android:id="@+id/dyn_rezults"/>
    </LinearLayout>

</LinearLayout>
