<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/backg"
    android:scrollbars="vertical"
    android:tileMode="repeat">

    <TextView
        style="@style/text_32"
        android:layout_marginTop="0dp"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/rezultati"
        android:id="@+id/menu"/>
    <TextView
        style="@style/text_16"
        android:layout_marginTop="0dp"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:gravity="center_horizontal"
        android:text="@string/stat_testov"/>
    <View
        style="@style/margin_10dp"
        android:layout_width="wrap_content"
        android:background="@drawable/separator"
        android:layout_height="1dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="@style/text_16"
            android:layout_marginTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:text="@string/front_camera"
            />
        <TextView
            style="@style/text_16"
            android:layout_marginTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:text="135"
            android:id="@+id/stat_rez_front"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="@style/text_16"
            android:layout_marginTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:text="@string/back_camera"
            />
        <TextView
            style="@style/text_16"
            android:layout_marginTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:text="135"
            android:id="@+id/stat_rez_back"/>
    </LinearLayout>
    <View
        style="@style/margin_10dp"
        android:layout_width="wrap_content"
        android:background="@drawable/separator"
        android:layout_height="1dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/text_32"
            android:layout_marginTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="39dp"
            android:text="@string/stat_rezultat"
            />
        <TextView
            style="@style/text_32"
            android:layout_marginTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="39dp"
            android:text="135"
            android:id="@+id/stat_rezults"/>
    </LinearLayout>
</LinearLayout>
